<resources>
    <!--application name-->
    <string name="app_name">Wassal</string>
    <string name="driveo">Wassal</string>

    <!--navigation drawer strings-->
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--login strings-->
    <string name="signIn">Sign in</string>
    <string name="forgotPasswor">Forgot my password</string>
    <string name="login">Login</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="registerNow">register now</string>

    <!--forgot password strings-->
    <string name="forgot_content">enter the email address associated with your account, and we\'ll email you a link to reset your password</string>
    <string name="sendReset">Send reset link</string>

    <!--create request order-->
    <string name="createRequest">Create Request</string>
    <string name="packageInfo">Package information</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="typeHere">Type here</string>
    <string name="uploadImg">Upload Images</string>
    <string name="next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="payment">Payment</string>
    <string name="submit">Submit</string>
    <string name="cash">Cash on Delivery</string>
    <string name="masterCard">Mastercard</string>
    <string name="visa">Visa</string>
    <string name="soon">Soon</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="invalid">Invalid credentials</string>
    <string name="wait">Please wait..</string>
    <string name="title_activity_trip">TripActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="trips">Trips</string>
    <string name="history">History</string>
    <string name="upcoming">Upcoming</string>
    <string name="editProfile">Edit profile</string>
    <string name="language">Language</string>
    <string name="changePassword">Change password</string>
    <string name="paymentMethod">Payment method</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="dummy">this is dummy data until we get data from the backend.. So we will wait until they finish and get data from our api .. Okay?! :D</string>
    <string name="oldPassword">Old password</string>
    <string name="newPassword">New password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="save">Save</string>
    <string name="changeEmail">Change email</string>
    <string name="changePhone">Change phone</string>
    <string name="changeImage">Change Image</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="soonToast">This part will be in the future plan ..</string>
    <string name="notVerified">This email is not verified</string>
    <string name="APINotFound">HTTP 404 Not Found</string>
    <string name="emailNotFound">this email not found!!</string>
    <string name="wrongMsg">Something went wrong! please check internet connection..</string>
    <string name="wrongPasswordConfirmation">wrong password confirmation !</string>
    <string name="oldPasswordNotValid">old password is not Valid</string>
    <string name="newPasswordNotValid">new password is not Valid</string>
    <string name="confirmPasswordNotValid">confirm password is not Valid</string>
    <string name="wrong">something went wrong !</string>
    <string name="passwordNotMatch">passwords don\'t match !</string>
    <string name="passwordNotValid">password is not valid</string>
    <string name="resetPassword">Reset password</string>
    <string name="changeName">Change Name</string>
    <string name="weight">Weight</string>
    <string name="pleaseEnterTitle">please enter title for your order</string>
    <string name="pleaseEnterDescription">please enter description for your order</string>
    <string name="pleaseEnterWeight">please enter the weight of your order</string>
    <string name="pleaseEnterImage">please enter one image for your order at least</string>
    <string name="selectDestination">please select destination location</string>
    <string name="invalidEmail">Invalid Email</string>
    <string name="maxImages">max number of images</string>
    <string name="pleaseEnterValidWeight">order weight must be between 1 kg to 100 kg</string>
    <string name="paymentSoon">payment will be enabled soon..</string>
    <string name="loginSuccessful">Login Successfull</string>
    <string name="logoutSuccessfully">logout successfully</string>
    <string name="sendingData">sending signup data!!</string>
    <string name="phoneValidError">please enter a valid phone</string>
    <string name="emailValidError">please enter a correct email</string>
    <string name="passwordNotStrongError">please enter stronger password</string>
    <string name="serverError">server error</string>
    <string name="verifying">verifying code....</string>
    <string name="resendingCode">resending code....</string>
    <string name="pickUpLocation">Pick Up Location</string>
    <string name="pickUpDescription">selected from past activity</string>
    <string name="dropOffLocation">Drop Off Location</string>
    <string name="notSelected">not selected yet</string>
    <string name="selectPickUp">select pick up</string>
    <string name="orderNow">Order Now</string>
    <string name="phone">Phone</string>
    <string name="signUp">Sign Up</string>
    <string name="haveAccount">already have an account?</string>
    <string name="loginNow">login now</string>
    <string name="userName">Wassal User</string>
    <string name="emailAddress">user@wassal.com</string>
    <string name="carriers">Carriers</string>
    <string name="fedex">fedex</string>
    <string name="selectCarrier">Select Carriers</string>
    <string name="validationCode">Validation Code</string>
    <string name="confirm">Confirm</string>
    <string name="sendVerificationCode">Send Verification Code</string>
    <string name="home">Home</string>
    <string name="myOrders">My Orders</string>
    <string name="profile">Profile</string>
    <string name="aboutUs">About Us</string>
    <string name="title_activity_tracking">Map</string>
    <string name="active">Active</string>
    <string name="past">Past</string>
    <string name="futureOrders">Future Orders</string>
    <string name="dummyDate">07 Apr 2018</string>
    <string name="dummyAddress">945 Abagail Praire</string>
    <string name="pending">pending</string>
    <string name="dummyCost">34.00LE</string>
    <string name="sending">sending ..</string>

</resources>
