<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.edit_profile.EditProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/changePass_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/editProfile"
            android:textColor="@color/header"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:src="@color/textColor"
            android:layout_marginTop="50dp"/>


        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_dark_blue_bg"
            android:text="@string/changeImage"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/editProfile_newEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:hint="@string/changeEmail"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            />

        <EditText
            android:id="@+id/changePass_newPass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:hint="@string/changePhone"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            />


    </LinearLayout>

    <Button
        android:id="@+id/editProfile_saveBtn"
        android:layout_width="256dp"
        android:layout_height="53dp"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:background="@drawable/btn_dark_blue_bg"
        android:text="@string/save"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/background_light"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>