<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.change_password.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/chpass_padding"
        android:paddingRight="100dp">
        <TextView
            android:id="@+id/changePass_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/chpass_margintop"
            android:text="@string/changePassword"
            android:textColor="@color/header"
            android:textSize="@dimen/header_font"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <EditText
            android:id="@+id/changePass_oldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/chpass_margintop1"
            android:hint="@string/oldPassword"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            />

        <EditText
            android:id="@+id/changePass_newPass"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/chpass_margintop2"
            android:hint="@string/newPassword"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            />

        <EditText
            android:id="@+id/changePass_confirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/chpass_margintop2"
            android:inputType="textPassword"
            android:hint="@string/confirmPassword"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            />
        <Button
            android:id="@+id/changePass_saveBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginBottom="22dp"
            android:background="@drawable/btn_dark_blue_bg"
            android:text="@string/save"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/chpass_margintop2"
            android:layout_alignParentBottom="true"
            android:onClick="saveChangeEvent"
            />
    </LinearLayout>




</RelativeLayout>