<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.forgot_password.reset_password.NewPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/newPass_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/newpass_margintop"
            android:text="@string/resetPassword"
            android:textColor="@color/header"
            android:layout_gravity="center"
            style="@style/header"
            />


        <EditText
            android:id="@+id/newPass_pass"
            android:layout_width="@dimen/edit_width"
            android:layout_height="@dimen/edit_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/chpass_margintop1"
            android:hint="@string/newPassword"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            />

        <EditText
            android:id="@+id/newPass_confirmPass"
            android:layout_width="@dimen/edit_width"
            android:layout_height="@dimen/edit_height"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/chpass_margintop2"
            android:hint="@string/confirmPassword"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            />
        <Button
            android:id="@+id/changePass_saveBtn"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_gravity="center"
            android:background="@drawable/btn_dark_blue_bg"
            android:text="@string/save"
            android:layout_marginTop="@dimen/chpass_margintop2"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold"
            android:onClick="saveNewPassowrdEvent"
            />
    </LinearLayout>




</RelativeLayout>