<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.iti.client.iti_gp_client.screens.order_description.OrderActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/createRequest"
        android:textColor="@color/header"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginStart="20dp"
        android:text="@string/packageInfo"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout9"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/order_titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textColor="@color/textColor" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginStart="3dp"
        android:text="@string/description"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/order_descriptionEditText"
        app:layout_constraintStart_toStartOf="@+id/order_descriptionEditText"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout9" />

    <EditText
        android:id="@+id/order_descriptionEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/typeHere"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/textColor"
        android:textColorHighlight="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginStart="10dp"
        android:text="@string/uploadImg"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/order_image"
        app:layout_constraintStart_toStartOf="@+id/order_image"
        app:layout_constraintTop_toBottomOf="@+id/order_descriptionEditText" />

    <ImageView
        android:id="@+id/order_image"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginBottom="51dp"
        android:layout_marginStart="42dp"
        android:src="@mipmap/ic_upload_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />


</android.support.constraint.ConstraintLayout>
