<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="app.iti.client.iti_gp_client.screens.payment.PaymentActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/createRequest"
        android:textColor="@color/header"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/payment"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:layout_gravity="center"

        />

    <ListView
        android:id="@+id/paymentList"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/listview_divider"
        android:dividerHeight="1dp"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/payment_submit"
        android:layout_width="256dp"
        android:layout_height="53dp"
        android:layout_marginBottom="480dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/btns_bg"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/cardview_light_background"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:onClick="submitBtnAction"/>

</LinearLayout>
